<resources>
    <string name="app_name">PurrfectBrews</string>
    <string name="quoteCof">“Today’s good mood is sponsored by coffee.”</string>
    <string name="checkPolicy">By creating an account, you agree to the Terms, Use and Privacy Policy</string>
    <string name="member"><u>I am already a member</u></string>
    <string name="forgotPass"><u>Forgot your password?</u></string>
    <string name="alreadyAcc">Already have an account?<b> Sign In</b></string>
    <string name="newHere">New here? <u>Sign Up instead.</u></string>
    <string name="quoteCof1">“Three cups of coffee a day keeps the doctor away!”</string>
    <string name="orderSuccess">Your order has been placed successfully.</string>
    <string name="moreDetail">For more details, go to my orders.</string>
<string name="intro">Welcome to PurrfectBrews, where cats and coffee blend in purr-fect harmony. Indulge in premium coffee and immerse yourself in the charm of our feline-inspired space. A delightful experience for cat lovers and coffee enthusiasts alike.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">227 Nguyen Van Cu, phuong 4, quan 5, TPHCM</string>
    <string name="product">a project of the Mobile Device Application Development course - CS426</string>
</resources>