<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".WelcomeScreen">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/victo_mono"
            android:letterSpacing="-0.1"
            android:text="HELLO THERE"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="20dp"
            android:alpha="0.85"
            app:strokeColor="@color/white">

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               android:padding="5dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/welcome"
                    android:background="@drawable/rounded_image_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/victo_mono"
                    android:letterSpacing="-0.1"
                    android:text="@string/quoteCof"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/vt323"
            android:text="GET STARTED"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:id="@+id/signUp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/alreadyAcc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:id="@+id/signIn"/>


    </LinearLayout>

</FrameLayout>