<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".intro">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/rectange_border"
            app:menu="@menu/top_app_bar1" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:scrollIndicators="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white1"
                app:strokeColor="@color/white1"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="600dp"
                    android:layout_marginHorizontal="5dp"

                    android:src="@drawable/intro1" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/black1"
                app:strokeColor="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/victo_mono"
                        android:text="About us:"
                        android:textColor="@color/white1"
                        android:textFontWeight="1000"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:fontFamily="@font/vt323"
                        android:text="@string/intro"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/victo_mono"
                            android:text="Located at:"
                            android:textColor="@color/white1"
                            android:textFontWeight="1000"
                            android:textSize="20dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white1"
                            android:fontFamily="@font/vt323"
                            android:text="Google Map"
                            android:id="@+id/googleMap"
                            android:textAllCaps="true"
                            android:textColor="@color/black1"
                            app:icon="@drawable/icons8_position_100"
                            app:iconTint="@color/black1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/black" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vt323"
                        android:text="@string/address"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/victo_mono"
                        android:text="Sponsored by:"
                        android:textColor="@color/white1"
                        android:textFontWeight="1000"
                        android:textSize="20dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="70dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/white1">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:id="@+id/facebook"
                                android:src="@drawable/phamvoquynhnhu" />
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/vt323"
                            android:text="Pham Vo Quynh Nhu - 21125052"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/cardView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/vt323"
                        android:text="@string/product"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white1"
                        android:textSize="22dp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white1"
                app:strokeColor="@color/white1"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="600dp"
                    android:layout_marginHorizontal="5dp"

                    android:src="@drawable/intro2" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </HorizontalScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>